2011-12-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Support using gmp with Closure CL.
	* src/lisp/num-gmp.lisp, src/lib/gmp_wrap.c: Add code for
	Closure CL.
	confugure.ac, src/interp/util.lisp,
	src/lisp/Makefile.in: Adjust.

2011-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* rename src/lisp/num-sb.lisp to 
	src/lisp/num-gmp.lisp.
	src/lisp/Makefile.in: Adjust.

2011-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/coercespad.pamphlet: Add CoercibleFrom and
	ConvertibleFrom.
	src/algebra/Makefile.in: Adjust.

2011-12-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/view3D.spad.pamphlet: Remove wrong Lisp
	qualification.

2011-11-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Add solver for linear systems represented by expressions.
	* src/algebra/expr.spad.pamphlet: Add ExpressionLinearSolve.
	src/algebra/Makefile.in: Adjust.

2011-11-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-package.lisp: When using sbcl
	preload "SB-SPROF".

2011-11-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/polycat.spad.pamphlet,
	src/algebra/multpoly.spad.pamphlet: Faster totalDegree.

2011-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet: Add power series
	expander for lambertW at 0.

2011-11-28  Martin Baker <ax87438@martinb.com>

	* src/algebra/scene.spad.pamphlet: Update new
	graphics framework.
	src/algebra/Makefile.in: Adjust.
	src/hyper/pages/graphics.ht: Document new framework.

2011-11-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add numeric lambertW.
	src/algebra/sf.spad.pamphlet: Use it.

2011-11-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/elfuts.spad.pamphlet: Fix expanders
	for elliptic integrals.

2011-11-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Fix shell glob to work
	in national locales.
