@@ -44,6 +44,9 @@
    */
 #undef HAVE_DECL_WAIT
 
+/* Host has EPIPE */
+#undef HAVE_EPIPE
+
 /* Define to 1 if you have the <gmp.h> header file. */
 #undef HAVE_GMP_H
 
@@ -55,6 +58,9 @@
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
+
+/* Host has MSG_NOSIGNAL */
+#undef HAVE_MSG_NOSIGNAL
 
 /* openpty is available */
 #undef HAVE_OPENPTY
